--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.57.4",
     "react-native-elements": "^0.19.1",
     "react-native-tab-view": "^1.2.0",
+    "react-native-vector-icons": "^4.2.0",
     "react-native-webview": "^2.5.0",
     "react-navigation": "^3.0.0-alpha.15",
     "react-navigation-tabs": "^0.8.4"
